bk_ida/gccida/c1/kill_value
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/kill_value/src/regrename.c:1583:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/kill_value/src/regrename.c:1583:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/kill_value/src/regrename.c:1585:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/kill_value/src/regrename.c:1595:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v7 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v5] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/kill_value/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/kill_value/src/regrename.c:1634:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/kill_value/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/kill_value/src/obj/regrename.o] Error 1
